syntax = "proto3";

option go_package = "github.com/liangjunmo/goproject/api/usercenterproto";

package usercenterproto;

service UserCenter {
  rpc SearchUser (SearchUserRequest) returns (SearchUserReply) {}
  rpc GetUserByUID (GetUserByUIDRequest) returns (GetUserByUIDReply) {}
  rpc GetUserByUsername (GetUserByUsernameRequest) returns (GetUserByUsernameReply) {}
  rpc CreateUser (CreateUserRequest) returns (CreateUserReply) {}
  rpc ValidatePassword (ValidatePasswordRequest) returns (ValidatePasswordReply) {}
}

message Error {
  string Code = 1;
  string Message = 2;
}

message User {
  uint32 UID = 1;
  string Username = 2;
  int64 CreateTime = 3;
  int64 UpdateTime = 4;
  int64 DeleteTime = 5;
}

message SearchUserRequest {
  repeated uint32 Uids = 1;
  repeated string Usernames = 2;
}

message SearchUserReply {
  Error Error = 1;
  repeated User Users = 2;
}

message GetUserByUIDRequest {
  uint32 UID = 1;
}

message GetUserByUIDReply {
  Error Error = 1;
  User User = 2;
}

message GetUserByUsernameRequest {
  string Username = 1;
}

message GetUserByUsernameReply {
  Error Error = 1;
  User User = 2;
}

message CreateUserRequest {
  string Username = 1;
  string Password = 2;
}

message CreateUserReply {
  Error Error = 1;
  User User = 2;
}

message ValidatePasswordRequest {
  string Username = 1;
  string Password = 2;
}

message ValidatePasswordReply {
  Error Error = 1;
}
